[package]
name = "Lapsus"
version = "1.2.0"
edition = "2024"

[dependencies]
cidre = { version = "0.11.5", default-features = false, features = ["cg"]}
core-graphics = "0.25.0"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSButton", "NSControl", "NSMenu", "NSMenuItem", "NSResponder", "NSRunningApplication", "NSStatusBar", "NSStatusBarButton", "NSStatusItem", "NSView", "NSEvent", "NSScreen"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSDate", "NSEnumerator", "NSNotification", "NSObject", "NSString", "NSTimer"] }
objc2-core-foundation = { version = "0.3.2" }
log = "0.4.29"
env_logger = "0.11.8"
chrono = "0.4.42"

[dependencies.macos_multitouch]
path = "macos-multitouch"
